@@ -2,6 +2,8 @@ Sat  Sep 18  2004	H. Wade Minter (minter@lunenburg.org)
      * Add a --config flag to point to an alternate mrvoicerc.
      * Wrap the database SQL import in a transaction for efficency.
      * Replace spurious die() calls with status updates.
+     * Add a tool, cpancheck.pl, to check CPAN for updates of the modules
+       that Mr. Voice uses.
 
 Fri  Sep 17  2004	H. Wade Minter (minter@lunenburg.org)
      * Get the move_tank function working with the HList.  Thanks to 
